# linux-kernel-module-rust-1

src/: chrdev.rs  lib.rs
tests/chrdev/tests/: tests.rs
tests/json-sysctl/: Cargo.toml
tests/json-sysctl/src/: lib.rs
